[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/icons/sound_off_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/images/icons/score_icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/hud/settings.gd" type="Script" id=3]
[ext_resource path="res://assets/images/buttons/empty_small.png" type="Texture" id=4]
[ext_resource path="res://assets/images/icons/shop_icon.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -988.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -1000.0
margin_right = -12.0
margin_bottom = -11.9999
rect_pivot_offset = Vector2( 89.6234, 500.425 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 88.0
margin_bottom = 988.0
mouse_filter = 2
alignment = 2

[node name="BankButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 728.0
margin_right = 88.0
margin_bottom = 812.0
rect_pivot_offset = Vector2( 44.4585, 40.9626 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/BankButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/BankButton/CenterContainer"]
margin_left = 26.0
margin_top = 14.0
margin_right = 61.0
margin_bottom = 69.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="ScoreButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 816.0
margin_right = 88.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 43.04, 41.3207 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScoreButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ScoreButton/CenterContainer"]
margin_left = 18.0
margin_top = 27.0
margin_right = 69.0
margin_bottom = 57.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="SoundButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 904.0
margin_right = 88.0
margin_bottom = 988.0
rect_pivot_offset = Vector2( 47.3749, 41.9542 )
texture_normal = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/SoundButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/SoundButton/CenterContainer"]
margin_left = 19.0
margin_top = 21.0
margin_right = 69.0
margin_bottom = 63.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="BannerSizeUpdate" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="button_down" from="MarginContainer/VBoxContainer/BankButton" to="." method="_on_BankButton_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/BankButton" to="." method="_on_BankButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BankButton" to="." method="_on_BankButton_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/ScoreButton" to="." method="_on_ScoreButton_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ScoreButton" to="." method="_on_ScoreButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/SoundButton" to="." method="_on_SoundButton_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/SoundButton" to="." method="_on_SoundButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="timeout" from="BannerSizeUpdate" to="." method="_on_BannerSizeUpdate_timeout"]
